[gd_scene load_steps=12 format=3 uid="uid://b3lpfx8qk37ud"]

[ext_resource type="Texture2D" uid="uid://gllcnmausqtn" path="res://sprites/ui/wooden_ui.png" id="1_xc7wx"]
[ext_resource type="Theme" uid="uid://bllropgu0cde8" path="res://resources/wooden_ui_theme.tres" id="2_bj20m"]
[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="2_fo1fd"]
[ext_resource type="Texture2D" uid="uid://d0stvyecnknkp" path="res://sprites/backgrounds/Jungle_Parallax_Jungle_Distance_x3.png" id="2_umdf3"]
[ext_resource type="Script" path="res://scenes/ui/settings_menu.gd" id="3_cb5gw"]
[ext_resource type="Texture2D" uid="uid://2ud461wlhm8a" path="res://sprites/backgrounds/Jungle_Parallax_Jungle_Distance_x2.png" id="3_tcq8y"]
[ext_resource type="Texture2D" uid="uid://shma1mseele" path="res://sprites/backgrounds/Jungle_Parallax_Jungle_Distance_x1.png" id="4_5fycv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6yjlf"]
atlas = ExtResource("1_xc7wx")
region = Rect2(130, 610, 28, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_gou3d"]
atlas = ExtResource("1_xc7wx")
region = Rect2(130, 577, 28, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_305wc"]
atlas = ExtResource("1_xc7wx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hi671"]
atlas = ExtResource("1_xc7wx")
region = Rect2(0, 32, 32, 32)

[node name="MainMenu" type="CanvasLayer"]
layer = 4
script = ExtResource("2_fo1fd")

[node name="JungleBackground" type="ParallaxBackground" parent="."]
scroll_base_offset = Vector2(0, -200)
scroll_base_scale = Vector2(10, 10)
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer3" type="ParallaxLayer" parent="JungleBackground"]
motion_scale = Vector2(0.8, 0)
motion_mirroring = Vector2(866, 0)

[node name="Sprite2D" type="Sprite2D" parent="JungleBackground/ParallaxLayer3"]
position = Vector2(0, -665)
texture = ExtResource("2_umdf3")
centered = false
region_rect = Rect2(296, 7296, 8, 0)

[node name="ParallaxLayer2" type="ParallaxLayer" parent="JungleBackground"]
motion_scale = Vector2(1.1, 0)
motion_mirroring = Vector2(866, 0)

[node name="Sprite2D" type="Sprite2D" parent="JungleBackground/ParallaxLayer2"]
position = Vector2(0, -665)
texture = ExtResource("3_tcq8y")
centered = false
region_rect = Rect2(296, 7296, 8, 0)

[node name="ParallaxLayer" type="ParallaxLayer" parent="JungleBackground"]
motion_scale = Vector2(1.5, 0)
motion_mirroring = Vector2(866, 0)

[node name="Sprite2D" type="Sprite2D" parent="JungleBackground/ParallaxLayer"]
position = Vector2(0, -665)
texture = ExtResource("4_5fycv")
centered = false
region_rect = Rect2(296, 7296, 8, 0)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(432, 242)

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_bj20m")

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.819608, 0.219608, 1)
theme_override_colors/font_shadow_color = Color(0.21719, 0.166705, 9.62615e-08, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/shadow_outline_size = 4
theme_override_font_sizes/font_size = 38
text = "Scales of the Golden Dragon"

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8

[node name="ContinueButton" type="Button" parent="MainMenu/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Continue"

[node name="NewGameButton" type="Button" parent="MainMenu/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Settings" type="Button" parent="MainMenu/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="MainMenu/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="SettingsContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="SettingsMenu" type="PanelContainer" parent="SettingsContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_bj20m")
script = ExtResource("3_cb5gw")

[node name="CenterContainer" type="CenterContainer" parent="SettingsContainer/SettingsMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsContainer/SettingsMenu/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="SettingsContainer/SettingsMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/shadow_outline_size = 4
theme_override_constants/line_spacing = 12
theme_override_font_sizes/font_size = 38
text = "Settings
"

[node name="Control" type="Control" parent="SettingsContainer/SettingsMenu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="MusicLabel" type="Label" parent="SettingsContainer/SettingsMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="SettingsContainer/SettingsMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = SubResource("AtlasTexture_6yjlf")
theme_override_icons/grabber_highlight = SubResource("AtlasTexture_gou3d")
max_value = 1.0
step = 0.0
value = 0.8

[node name="SoundLabel" type="Label" parent="SettingsContainer/SettingsMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Sounds Volume
"
horizontal_alignment = 1

[node name="SoundSlider" type="HSlider" parent="SettingsContainer/SettingsMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.0
value = 0.8

[node name="CloseButton" type="TextureButton" parent="SettingsContainer/SettingsMenu"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = SubResource("AtlasTexture_305wc")
texture_pressed = SubResource("AtlasTexture_hi671")

[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainMenu/CenterContainer/VBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="value_changed" from="SettingsContainer/SettingsMenu/CenterContainer/VBoxContainer/MusicSlider" to="SettingsContainer/SettingsMenu" method="_on_slider_value_changed" binds= ["Music"]]
[connection signal="value_changed" from="SettingsContainer/SettingsMenu/CenterContainer/VBoxContainer/SoundSlider" to="SettingsContainer/SettingsMenu" method="_on_slider_value_changed" binds= ["Sounds"]]
[connection signal="pressed" from="SettingsContainer/SettingsMenu/CloseButton" to="SettingsContainer/SettingsMenu" method="_on_close_button_pressed"]
